Library/AXL(Library)/C, C++/AXM.h

//======== set motion parameter ===========================================================================================================================================================
// If file is not loaded by AxmMotLoadParaAll, set default parameter in initial parameter setting.
// Apply to all axes which is being used in PC equally. Default parameters are as below.
// 00:AXIS_NO.             =0       01:PULSE_OUT_METHOD.    =4      02:ENC_INPUT_METHOD.    =3     03:INPOSITION.          =2
// 04:ALARM.               =0       05:NEG_END_LIMIT.       =0      06:POS_END_LIMIT.       =0     07:MIN_VELOCITY.        =1
// 08:MAX_VELOCITY.        =700000  09:HOME_SIGNAL.         =4      10:HOME_LEVEL.          =1     11:HOME_DIR.            =-1
// 12:ZPHASE_LEVEL.        =1       13:ZPHASE_USE.          =0      14:STOP_SIGNAL_MODE.    =0     15:STOP_SIGNAL_LEVEL.   =0
// 16:HOME_FIRST_VELOCITY. =10000   17:HOME_SECOND_VELOCITY.=10000  18:HOME_THIRD_VELOCITY. =2000  19:HOME_LAST_VELOCITY.  =100
// 20:HOME_FIRST_ACCEL.    =40000   21:HOME_SECOND_ACCEL.   =40000  22:HOME_END_CLEAR_TIME. =1000  23:HOME_END_OFFSET.     =0
// 24:NEG_SOFT_LIMIT.      =0.000   25:POS_SOFT_LIMIT.      =0      26:MOVE_PULSE.          =1     27:MOVE_UNIT.           =1
// 28:INIT_POSITION.       =1000    29:INIT_VELOCITY.       =200    30:INIT_ACCEL.          =400   31:INIT_DECEL.          =400
// 32:INIT_ABSRELMODE.     =0       33:INIT_PROFILEMODE.    =4

// 00=[AXIS_NO             ]: axis (start from 0axis)
// 01=[PULSE_OUT_METHOD    ]: Pulse out method TwocwccwHigh = 6
// 02=[ENC_INPUT_METHOD    ]: disable = 0   1 multiplication = 1  2 multiplication = 2  4 multiplication = 3, for replacing the direction of splicing (-).1 multiplication = 11  2 multiplication = 12  4 multiplication = 13
// 03=[INPOSITION          ], 04=[ALARM     ], 05,06 =[END_LIMIT   ]  : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 07=[MIN_VELOCITY        ]: START VELOCITY
// 08=[MAX_VELOCITY        ]: command velocity which driver can accept. Generally normal servo is 700k
// Ex> screw : 20mm pitch drive: 10000 pulse motor: 400w
// 09=[HOME_SIGNAL         ]: 4 - Home in0 , 0 :PosEndLimit , 1 : NegEndLimit // refer _HOME_SIGNAL.
// 10=[HOME_LEVEL          ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 11=[HOME_DIR            ]: HOME DIRECTION 1:+direction, 0:-direction
// 12=[ZPHASE_LEVEL        ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 13=[ZPHASE_USE          ]: use of Z phase. 0: not use , 1: - direction, 2: +direction
// 14=[STOP_SIGNAL_MODE    ]: ESTOP, mode in use of SSTOP  0:slowdown stop, 1:emergency stop
// 15=[STOP_SIGNAL_LEVEL   ]: ESTOP, SSTOP use level. : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
// 16=[HOME_FIRST_VELOCITY ]: 1st move velocity
// 17=[HOME_SECOND_VELOCITY]: velocity after detecting
// 18=[HOME_THIRD_VELOCITY ]: the last velocity
// 19=[HOME_LAST_VELOCITY  ]: velocity for index detecting and detail detecting
// 20=[HOME_FIRST_ACCEL    ]: 1st acceleration, 21=[HOME_SECOND_ACCEL   ] : 2nd acceleration
// 22=[HOME_END_CLEAR_TIME ]: queue time to set origin detecting Enc value,  23=[HOME_END_OFFSET] : move as much as offset after detecting of origin.
// 24=[NEG_SOFT_LIMIT      ]: - not use if set same as SoftWare Limit , 25=[POS_SOFT_LIMIT ]: - not use if set same as SoftWare Limit.
// 26=[MOVE_PULSE          ]: amount of pulse per driver revolution               , 27=[MOVE_UNIT  ]: travel distance per driver revolution :screw Pitch
// 28=[INIT_POSITION       ]: initial position when use agent , user can use optionally
// 29=[INIT_VELOCITY       ]: initial velocity when use agent, user can use optionally
// 30=[INIT_ACCEL          ]: initial acceleration when use agent, user can use optionally
// 31=[INIT_DECEL          ]: initial deceleration when use agent, user can use optionally
// 32=[INIT_ABSRELMODE     ]: absolute(0)/relative(1) set position
// 33=[INIT_PROFILEMODE    ]: set profile mode in (0 - 4)
//                            '0': symmetry Trapezode, '1': asymmetric Trapezode, '2': symmetry Quasi-S Curve, '3':symmetry S Curve, '4':asymmetric S Curve
// 34=[SVON_LEVEL          ]: 0 = contact B, 1 = contact A
// 35=[ALARM_RESET_LEVEL   ]: 0 = contact B, 1 = contact A
// 36=[ENCODER_TYPE        ]: 0 = TYPE_INCREMENTAL, 1 = TYPE_ABSOLUTE, 2 = TYPE_NONE
// 37=[SOFT_LIMIT_SEL      ]: 0 = COMMAND, 1 = ACTUAL
// 38=[SOFT_LIMIT_STOP_MODE]: 0 = EMERGENCY_STOP, 1 = SLOWDOWN_STOP
// 39=[SOFT_LIMIT_ENABLE   ]: 0 = DISABLE, 1 = ENABLE

// load .mot file which is saved as AxmMotSaveParaAll. Optional modification is available by user.
DWORD    __stdcall AxmMotLoadParaAll(char *szFilePath);
// Save all parameter for all current axis by axis. Save as .mot file. Load file by using  AxmMotLoadParaAll.
DWORD    __stdcall AxmMotSaveParaAll(char *szFilePath);
// In parameter 28 - 31, user sets by using this API in the program.
DWORD    __stdcall AxmMotSetParaLoad(long lAxisNo, double dInitPos, double dInitVel, double dInitAccel, double dInitDecel);
// In parameter 28 - 31, user verifys by using this API in the program.
DWORD    __stdcall AxmMotGetParaLoad(long lAxisNo, double *dpInitPos, double *dpInitVel, double *dpInitAccel, double *dpInitDecel);
// Set the pulse output method of specific axis.
//uMethod  0 :OneHighLowHigh, 1 :OneHighHighLow, 2 :OneLowLowHigh, 3 :OneLowHighLow, 4 :TwoCcwCwHigh
//         5 :TwoCcwCwLow,    6 :TwoCwCcwHigh,   7 :TwoCwCcwLow,   8 :TwoPhase,      9 :TwoPhaseReverse
// OneHighLowHigh          = 0x0,   // 1 pulse method, PULSE(Active High), forward direction(DIR=Low)  / reverse direction(DIR=High)
// OneHighHighLow          = 0x1,   // 1 pulse method, PULSE(Active High), forward direction (DIR=High) / reverse direction (DIR=Low)
// OneLowLowHigh           = 0x2,   // 1 pulse method, PULSE(Active Low), forward direction (DIR=Low)  / reverse direction (DIR=High)
// OneLowHighLow           = 0x3,   // 1 pulse method, PULSE(Active Low), forward direction (DIR=High) / reverse direction (DIR=Low)
// TwoCcwCwHigh            = 0x4,   // 2 pulse method, PULSE(CCW: reverse direction),  DIR(CW: forward direction),  Active High
// TwoCcwCwLow             = 0x5,   // 2 pulse method, PULSE(CCW: reverse direction),  DIR(CW: forward direction),  Active Low
// TwoCwCcwHigh            = 0x6,   // 2 pulse method, PULSE(CW: forward direction),   DIR(CCW: reverse direction), Active High
// TwoCwCcwLow             = 0x7,   // 2 pulse method, PULSE(CW: forward direction),   DIR(CCW: reverse direction), Active Low
// TwoPhase                = 0x8,   // 2 phase (90' phase difference),  PULSE lead DIR(CW: forward direction), PULSE lag DIR(CCW: reverse direction)
// TwoPhaseReverse         = 0x9    // 2 phase(90' phase difference),  PULSE lead DIR(CCW: Forward diredtion), PULSE lag DIR(CW: Reverse direction)
DWORD    __stdcall AxmMotSetPulseOutMethod(long lAxisNo, DWORD uMethod);
// Return the setting of pulse output method of specific axis.
DWORD    __stdcall AxmMotGetPulseOutMethod(long lAxisNo, DWORD *upMethod);
// Set the Encoder input method including the setting of increase direction of actual count of specific axis.
// ObverseUpDownMode       = 0x0,   // Forward direction Up/Down
// ObverseSqr1Mode         = 0x1,   // Forward direction 1 multiplication
// ObverseSqr2Mode         = 0x2,   // Forward direction 2 multiplication
// ObverseSqr4Mode         = 0x3,   // Forward direction 4 multiplication
// ReverseUpDownMode       = 0x4,   // Reverse direction Up/Down
// ReverseSqr1Mode         = 0x5,   // Reverse direction 1 multiplication
// ReverseSqr2Mode         = 0x6,   // Reverse direction 2 multiplication
// ReverseSqr4Mode         = 0x7    // Reverse direction 4 multiplication
DWORD    __stdcall AxmMotSetEncInputMethod(long lAxisNo, DWORD uMethod);
// Return the Encoder input method including the setting of increase direction of actual count of specific axis.
DWORD    __stdcall AxmMotGetEncInputMethod(long lAxisNo, DWORD *upMethod);
// If you want to set specified velocity unit in RPM(Revolution Per Minute),
// ex>    calculate rpm :
// 4500 rpm ?
// When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
// if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
// The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
// If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
// Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.
// Caution : If it is controlled with rpm, velocity and acceleration will be changed to rpm unit as well.

// Set the travel distance of specific axis per pulse.
DWORD    __stdcall AxmMotSetMoveUnitPerPulse(long lAxisNo, double dUnit, long lPulse);
// Return the travel distance of specific axis per pulse.
DWORD    __stdcall AxmMotGetMoveUnitPerPulse(long lAxisNo, double *dpUnit, long *lpPulse);
// Set deceleration starting point detecting method to specific axis.
// AutoDetect 0x0 : automatic acceleration/deceleration.
// RestPulse  0x1 : manual acceleration/deceleration."
DWORD    __stdcall AxmMotSetDecelMode(long lAxisNo, DWORD uMethod);
// Return the deceleration starting point detecting method of specific axis.
DWORD    __stdcall AxmMotGetDecelMode(long lAxisNo, DWORD *upMethod);
// Set remain pulse to the specific axis in manual deceleration mode.
DWORD    __stdcall AxmMotSetRemainPulse(long lAxisNo, DWORD uData);
// Return remain pulse of the specific axis in manual deceleration mode.
DWORD    __stdcall AxmMotGetRemainPulse(long lAxisNo, DWORD *upData);
// Set maximum velocity to the specific axis in uniform velocity movement API.
// Note : Input maximum speed value is not PPS but UNIT.
// ex) Maximum output frequency(PCI-N804/404 : 10 MPPS)
// ex) Maximum output Unit/Sec(PCI-N804/404 : 10MPPS * Unit/Pulse)
DWORD    __stdcall AxmMotSetMaxVel(long lAxisNo, double dVel);
// Return maximum velocity of the specific axis in uniform velocity movement API
DWORD    __stdcall AxmMotGetMaxVel(long lAxisNo, double *dpVel);
// Set travel distance calculation mode of specific axis.
//uAbsRelMode : POS_ABS_MODE '0' - absolute coordinate system
//              POS_REL_MODE '1' - relative coordinate system
DWORD    __stdcall AxmMotSetAbsRelMode(long lAxisNo, DWORD uAbsRelMode);
// Return travel distance calculation mode of specific axis.
DWORD    __stdcall AxmMotGetAbsRelMode(long lAxisNo, DWORD *upAbsRelMode);
//Set move velocity profile mode of specific axis.
//ProfileMode : SYM_TRAPEZOIDE_MODE  '0' - symmetry Trapezode
//              ASYM_TRAPEZOIDE_MODE '1' - asymmetric Trapezode
//              QUASI_S_CURVE_MODE   '2' - symmetry Quasi-S Curve
//              SYM_S_CURVE_MODE     '3' - symmetry S Curve
//              ASYM_S_CURVE_MODE    '4' - asymmetric S Curve
//              SYM_TRAP_M3_SW_MODE  '5' - Symmetry Trapezode : MLIII internal S/W Profile
//              ASYM_TRAP_M3_SW_MODE '6' - Asymmetry Trapezode : MLIII internal S/W Profile
//              SYM_S_M3_SW_MODE     '7' - Symmetry S Curve : MLIII internal S/W Profile
//              ASYM_S_M3_SW_MODE    '8' - Asymmetric S Curve : MLIII internal S/W Profile
DWORD    __stdcall AxmMotSetProfileMode(long lAxisNo, DWORD uProfileMode);
// Return move velocity profile mode of specific axis.
DWORD    __stdcall AxmMotGetProfileMode(long lAxisNo, DWORD *upProfileMode);
//Set acceleration unit of specific axis.
//AccelUnit : '0' - use unit/sec2 for the unit of acceleration/deceleration
//            '1' - use sec for the unit of acceleration/deceleration
DWORD    __stdcall AxmMotSetAccelUnit(long lAxisNo, DWORD uAccelUnit);
// Return acceleration unit of specific axis.
DWORD    __stdcall AxmMotGetAccelUnit(long lAxisNo, DWORD *upAccelUnit);
// Set initial velocity to the specific axis.
DWORD    __stdcall AxmMotSetMinVel(long lAxisNo, double dMinVel);
// Return initial velocity of the specific axis.
DWORD    __stdcall AxmMotGetMinVel(long lAxisNo, double *dpMinVel);